--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,21 +8,21 @@ env:
   CI: false
 
 jobs:
-  test-and-build:
+  build:
+    name: Build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: '22.x'
-          cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        uses: bahmutov/npm-install@v1
 
       - name: Run tests
         run: npm test -- --watchAll=false
@@ -30,8 +30,8 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Upload build artifacts
+      - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
         with:
-          name: build-folder
-          path: build
+          name: production-files
+          path: ./build
