--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,15 @@
-name: React CI — test & build
+name: React CI — Build & Deploy to Netlify
 
 on:
   push:
     branches:
       - main
+
 env:
   CI: false
 
 jobs:
+  # 🧱 Build Job
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -24,11 +26,38 @@ jobs:
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
-      - name: Build project
+      - name: Build project (Vite)
         run: npm run build
 
-      - name: Upload production-ready build files
+      - name: Upload build files
         uses: actions/upload-artifact@v4
         with:
-          name: production-files
-          path: ./build
+          name: dist-folder
+          path: ./dist   # ✅ Vite builds here
+
+  # 🚀 Deploy Job
+  deploy:
+    name: Deploy to Netlify
+    runs-on: ubuntu-latest
+    needs: build  # ✅ ensures build completes successfully first
+
+    steps:
+      - name: Download build files
+        uses: actions/download-artifact@v4
+        with:
+          name: dist-folder
+          path: ./dist   # ✅ Match the folder name above
+
+      - name: Deploy to Netlify
+        uses: nwtgck/actions-netlify@v2.0
+        with:
+          publish-dir: './dist'   # ✅ Deploy Vite's dist folder
+          production-branch: 'main'
+          deploy-message: '🚀 Automated deployment from GitHub Actions'
+          enable-pull-request-comment: false
+          enable-commit-comment: false
+          enable-commit-status: true
+          alias: 'main'
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
